Fixed message wrap issue

--- a/public/theme.css
+++ b/public/theme.css
@@ -69,7 +69,7 @@ a {
 .message {
     text-shadow: rgb(0, 0, 0) -1px -1px 0px, rgb(0, 0, 0) 1px -1px 0px, rgb(0, 0, 0) -1px 1px 0px, rgb(0, 0, 0) 1px 1px 0px;
     word-wrap: break-word;
-    white-space: pre;
+    white-space: pre-wrap;
     color: white;
 }
 
